# python-practice

./: .gitignore  README.md  pyproject.toml
projects/brownie-exam/: README.md  pyproject.toml
projects/brownie-exam/contracts/: Storage.sol
projects/brownie-exam/scripts/: deploy.py
projects/brownie-exam/tests/: test_storage.py
projects/codeup/: pyproject.toml
projects/codeup/codeup/: basic001.py  basic002.py  basic003.py  basic004.py  basic005.py  basic006.py  basic007.py  basic008.py  basic009.py  basic010.py  basic011.py  basic012.py  basic013.py  basic014.py  basic015.py  basic016.py  basic017.py  basic018.py  basic019.py  basic020.py  basic021.py  basic022.py  basic023.py  basic024.py  basic025.py  basic026.py  basic027.py  basic028.py  basic029.py  basic030.py  basic031.py  basic032.py  basic033.py  basic034.py  basic035.py  basic036.py  basic037.py  basic038.py  basic039.py  basic040.py  (+45 more)
projects/proj001/: pyproject.toml
projects/proj002/: pyproject.toml
projects/proj002/proj002/: __main__.py
