[project]
name = "python-practics"
version = "0.1.0"
description = "Monorepo for multiple Python projects"
authors = [
    {name = "hlibbc",email = "hlib.master@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
