[project]
name = "codeup"
version = "0.1.0"
description = "Problem sets: 100 Python basics"
authors = [
    {name = "hlibbc",email = "hlib.master@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
basic001 = "codeup.basic001:main"
basic002 = "codeup.basic002:main"
basic003 = "codeup.basic003:main"
basic004 = "codeup.basic004:main"
basic005 = "codeup.basic005:main"
basic006 = "codeup.basic006:main"
basic007 = "codeup.basic007:main"
basic008 = "codeup.basic008:main"
basic009 = "codeup.basic009:main"
basic010 = "codeup.basic010:main"
basic011 = "codeup.basic011:main"
basic012 = "codeup.basic012:main"
basic013 = "codeup.basic013:main"
basic014 = "codeup.basic014:main"
basic015 = "codeup.basic015:main"
basic016 = "codeup.basic016:main"
basic017 = "codeup.basic017:main"
basic018 = "codeup.basic018:main"
basic019 = "codeup.basic019:main"
basic020 = "codeup.basic020:main"
basic021 = "codeup.basic021:main"
basic022 = "codeup.basic022:main"
basic023 = "codeup.basic023:main"
basic024 = "codeup.basic024:main"
basic025 = "codeup.basic025:main"
basic026 = "codeup.basic026:main"
basic027 = "codeup.basic027:main"
basic028 = "codeup.basic028:main"
basic029 = "codeup.basic029:main"
basic030 = "codeup.basic030:main"
basic031 = "codeup.basic031:main"
basic032 = "codeup.basic032:main"
basic033 = "codeup.basic033:main"
basic034 = "codeup.basic034:main"
basic035 = "codeup.basic035:main"
basic036 = "codeup.basic036:main"
basic037 = "codeup.basic037:main"
basic038 = "codeup.basic038:main"
basic039 = "codeup.basic039:main"
basic040 = "codeup.basic040:main"
basic041 = "codeup.basic041:main"
basic042 = "codeup.basic042:main"
basic043 = "codeup.basic043:main"
basic044 = "codeup.basic044:main"
basic045 = "codeup.basic045:main"
basic046 = "codeup.basic046:main"
basic047 = "codeup.basic047:main"
basic048 = "codeup.basic048:main"
basic049 = "codeup.basic049:main"
basic050 = "codeup.basic050:main"
basic051 = "codeup.basic051:main"
basic052 = "codeup.basic052:main"
basic053 = "codeup.basic053:main"
basic054 = "codeup.basic054:main"
basic055 = "codeup.basic055:main"
basic056 = "codeup.basic056:main"
basic057 = "codeup.basic057:main"
basic058 = "codeup.basic058:main"
basic059 = "codeup.basic059:main"
basic060 = "codeup.basic060:main"
basic061 = "codeup.basic061:main"
basic062 = "codeup.basic062:main"
basic063 = "codeup.basic063:main"
basic064 = "codeup.basic064:main"
basic065 = "codeup.basic065:main"
basic066 = "codeup.basic066:main"
basic067 = "codeup.basic067:main"
basic068 = "codeup.basic068:main"
basic069 = "codeup.basic069:main"
basic070 = "codeup.basic070:main"
basic071 = "codeup.basic071:main"
basic072 = "codeup.basic072:main"
basic073 = "codeup.basic073:main"
basic074 = "codeup.basic074:main"
basic075 = "codeup.basic075:main"
basic076 = "codeup.basic076:main"
basic077 = "codeup.basic077:main"
basic078 = "codeup.basic078:main"
basic079 = "codeup.basic079:main"
basic080 = "codeup.basic080:main"
basic081 = "codeup.basic081:main"
