[project]
name = "proj001"
version = "0.1.0"
description = "for monorepo test: hello world!"
authors = [
    {name = "hlibbc hlib.master@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
proj001 = "proj001.__main__:main"
