[project]
name = "proj002"
version = "0.1.0"
description = "for monorepo test: hello python!"
authors = [
    {name = "hlibbc hlib.master@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
proj002 = "proj002.__main__:main"